@@ -1,6 +1,7 @@
 
 Drupal 7.23, xxxx-xx-xx (development version)
 -----------------------
+- Fixed a bug which caused nested contextual links to display improperly.
 - Fixed a bug which prevented cached image derivatives from being flushed for
   private files and other non-default file schemes.
 - Fixed drupal_render() to always return an empty string when there is no
